# djangogql

./: .gitignore  setup.cfg  setup.py
djangogql/: auth_backend.py  context.py  decorators.py  jwt.py  middleware.py
djangogql/core/: __init__.py  connection.py  mutations.py
djangogql/core/types/: filter_input.py  model.py  model_converter.py  registry.py
djangogql/utils/: __init__.py
