[metadata]
name = djangogql
version = 0.1
description = A Django app to build graphql apis.
long_description = file: README.rst
url = https://www.example.com/
author = Felipe Faria
author_email = felipevisu@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    django-filter >= 23.2
    graphene >= 2.1.9, < 3
    graphql-core >= 2.3.2, < 3
    graphql-relay >= 2.0.1, < 3
    promise >= 2.3
    PyJWT >= 2.7.0